# liquidity-hunter

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  index.css  theme.ts
frontend/src/api/: dashboard.ts
frontend/src/charting/: DivergenceArcPrimitive.ts  (+6 more)
graphify-out/: .gitignore  .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json
graphify-out/2026-07-02/: graph.json  manifest.json
graphify-out/cache/: stat-index.json
graphify-out/memory/: query_20260702_182917_como_um_choch_vira_um_poi_zone.md
graphify-out/reflections/: LESSONS.md
liquidity_hunter/: __init__.py
liquidity_hunter/api/: __init__.py  cache.py  main.py  schemas.py
liquidity_hunter/app/: __init__.py  dashboard_data.py  liquidation_backtest.py  liquidity_hunt.py  narrative.py  overview.py  structure_confluence.py
liquidity_hunter/config/: __init__.py  settings.py
liquidity_hunter/core/: __init__.py
liquidity_hunter/dashboard/: __init__.py  app.py  charts.py  styles.py
liquidity_hunter/data/: __init__.py  exceptions.py  retry.py
liquidity_hunter/docs/: architecture.md  estrutura_bos_choch.md  psychology.md  scoring.md  structure_decisions.md  volume_e_confluencia.md
liquidity_hunter/indicators/: __init__.py  volume_delta.py
liquidity_hunter/liquidity/: __init__.py  mitigation.py
liquidity_hunter/psychology/: __init__.py  models.py
liquidity_hunter/scoring/: __init__.py  engine.py  heatmap.py  models.py  weights.py
(+162 files in other folders)
