[tool.poetry]
name = "liquidity-hunter"
version = "0.1.0"
description = "Research platform for market liquidity detection and market psychology analysis."
authors = ["Paulo <pauloedu.rocha54@gmail.com>"]
readme = "README.md"
packages = [{ include = "liquidity_hunter" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9"
pydantic-settings = "^2.5"
pandas = "^2.2"
numpy = "^2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
ruff = "^0.6"
mypy = "^1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["liquidity_hunter"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["liquidity_hunter/tests"]
